made reportTake more efficient added config.properties for speedtest